--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
 <h1>Lachlan</h1>
+<h3>Profile</h3>
+<ul>
+    <li>Started: 2nd of august 2025</li>
+    <li>Role:Software Developer</li>
+    <li>Hobbies: Reading, Drawing, Gaming, Photography, Bouldering</li>
+    </ul>
+    
